welcome.lessons.welcome.array.island.Island.scala.error
island:9: error: ')' expected but 'var' found.
			var j = i
                        ^